Add packages.txt for Streamlit Cloud deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
-streamlit
-pytesseract
-Pillow
-python-dateutil
-pdfplumber
-sqlalchemy
-pandas
-opencv-python
+streamlit>=1.24.0
+pytesseract>=0.3.10
+Pillow>=9.5.0
+python-dateutil>=2.8.2
+pdfplumber>=0.9.0
+sqlalchemy>=2.0.0
+pandas>=2.0.0
+opencv-python>=4.8.0
+pdf2image>=1.16.3
+poppler-utils
+numpy>=1.24.0
+python-dotenv>=1.0.0
+click>=8.0.0
+watchdog>=3.0.0
+
